# cpp-cache

./: CMakeLists.txt  README.md  appveyor.yml
include/cpp-cache/: cache.h  fifo-cache.h  lfu-cache.h  lifo-cache.h  lru-cache.h  mru-cache.h  random-cache.h  ttl-cache.h
include/cpp-cache/policy/: fifo.h  lfu.h  lifo.h  lru.h  mru.h  none.h  random.h  ttl.h
include/cpp-cache/storage/: map.h
src/test/: CMakeLists.txt  fifo.cpp  lifo.cpp  mru.cpp  random.cpp  ttl.cpp
